<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.szxgm.gusustreet.ui.fragment.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.szxgm.gusustreet.ui.fragment.main.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_address"
        android:name="com.szxgm.gusustreet.ui.fragment.main.AddressFragment"
        android:label="@string/title_address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.szxgm.gusustreet.ui.fragment.main.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>
